--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "src/index.tsx",
   "scripts": {
-    "start": "webpack-dev-server --env.development --hot --progress --config webpack/webpack.config.js",
-    "build": "webpack --env.production --config webpack/webpack.config.js"
+    "start": "webpack-dev-server --hot --progress --config webpack/dev.config.js",
+    "build": "webpack --config webpack/prod.config.js"
   },
   "dependencies": {
     "react": "^16.13.1",
