--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "src/index.tsx",
   "scripts": {
-    "start": "webpack-dev-server --hot --progress --config webpack/dev.config.js",
+    "start": "webpack-dev-server --open --hot --config webpack/dev.config.js",
     "build": "webpack --config webpack/prod.config.js"
   },
   "dependencies": {
