--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "history": "^5.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "uuid": "^8.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.11.1",
@@ -23,6 +24,7 @@
     "@types/react": "^16.9.44",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.5",
+    "@types/uuid": "^8.0.1",
     "autoprefixer": "^9.8.6",
     "babel-loader": "^8.1.0",
     "babel-minify-webpack-plugin": "^0.3.1",
