--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
+    "rxjs": "^6.6.2",
     "uuid": "^8.3.0"
   },
   "devDependencies": {
