--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my-first-react-app",
   "version": "1.0.0",
   "main": "src/index.tsx",
+  "homepage": "http://rvanheest.github.io/react-demo",
   "scripts": {
     "start": "webpack-dev-server --open --hot --config webpack/dev.config.js",
     "build": "webpack --progress --config webpack/prod.config.js"
@@ -32,7 +33,6 @@
     "@types/uuid": "^8.0.1",
     "autoprefixer": "^9.8.6",
     "babel-loader": "^8.1.0",
-    "babel-minify-webpack-plugin": "^0.3.1",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^4.2.1",
     "html-webpack-plugin": "^4.3.0",
@@ -42,6 +42,7 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
     "style-loader": "^1.2.1",
+    "terser-webpack-plugin": "^4.1.0",
     "typescript": "^3.9.7",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
